refactor: update file reading methods to use InputStream
Refactor methods in InputUtils to read from InputStream instead of file paths. This enhances flexibility and allows for better handling of different input sources. Updated corresponding tests to match the new method signatures.