@@ -1,34 +1,25 @@
 package aocUtils;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
- * Utility class providing methods for reading input from files.
+ * Utility class providing methods for reading input from InputStreams.
  */
 public class InputUtils {
 
-    /**
-     * Reads all lines from a file specified by the given file path and returns them as a list of strings.
-     *
-     * @param filePath the path to the file to be read
-     * @return a list of strings, where each string is a line from the file
-     * @throws IOException if an I/O error occurs reading from the file or a malformed or unmappable byte sequence is read
-     */
-    public static List<String> readLinesFromFile(String filePath) throws IOException {
-        return Files.readAllLines(Paths.get(filePath));
+    public static List<String> readLinesFromInputStream(InputStream inputStream) throws IOException {
+        try(InputStreamReader isr = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
+            BufferedReader br = new BufferedReader(isr)) {
+            return br.lines().toList();
+        }
     }
-    
-    /**
-     * Reads the contents of a file specified by the given file path and returns it as a single string.
-     *
-     * @param filePath the path to the file to be read
-     * @return the contents of the file as a string
-     * @throws IOException if an I/O error occurs reading from the file or a malformed or unmappable byte sequence is read
-     */
-    public static String readFileAsString(String filePath) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(filePath)));
+
+    public static String readInputStreamAsString(InputStream inputStream) throws IOException {
+        return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
     }
 }
